@@ -43,7 +43,9 @@
    -  option -bin: to create an "alignment" segment/section that modifies
       the RVA only, the ALIGN() segment attribute syntax has been extended.
    -  sample Win32_1p.asm added, sample Win32_5.asm adjusted.
-   
+   -  option -Zne: now makes jwasm refuse name after .CODE if model is tiny;
+      see simpseg1.asm.
+   -  debug option -dma added to display memory allocations.
 
    09.06.2024, v2.18:
 
